Bug 1354126 - allow footer to wrap underneath the panel and add a 'done' button, r=mikedeboer
MozReview-Commit-ID: 1LbwmhfGp49

UltraBlame original commit: c0f69399f6c6a0fd23a2b6e8cc474b8834d46585

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -7022,6 +7022,122 @@ edges
 #
 customization
 -
+container
+{
+-
+moz
+-
+box
+-
+orient
+:
+horizontal
+;
+}
+#
+customization
+-
+container
+[
+photon
+]
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+}
+#
+customization
+-
+container
+[
+photon
+]
+>
+#
+customization
+-
+content
+-
+container
+{
+display
+:
+flex
+;
+flex
+-
+grow
+:
+1
+;
+min
+-
+height
+:
+0
+;
+}
+#
+customization
+-
+container
+[
+photon
+]
+>
+#
+customization
+-
+content
+-
+container
+>
+#
+customization
+-
+palette
+-
+container
+{
+flex
+-
+grow
+:
+1
+;
+}
+#
+customization
+-
+panelHolder
+>
+#
+widget
+-
+overflow
+-
+fixed
+-
+list
+{
+padding
+-
+bottom
+:
+50px
+;
+}
+#
+customization
+-
 panelHolder
 {
 overflow
